# video-ui

./: CMakeLists.txt
src/: Adjust.qml  CMakeLists.txt  Menu.qml  MovieMenu.qml  PlayGames.qml  PlayVideo.qml  RootMenu.qml  TvEpisodeMenu.qml  TvSeasonMenu.qml  TvShowMenu.qml  VideoFileMenu.qml  Youtube.qml  YoutubeResults.qml  backend.cpp  backend.h  main.cpp  main.qml  menu_option.cpp  menu_option.h  mpv.h  process.h  qml.qrc  qrc_qml.cpp  video_options.cpp  video_options.h
